--- a/css/styles.css
+++ b/css/styles.css
@@ -73,16 +73,16 @@ img {
   margin-left: auto;
 }
 
-.contacts-list-item:not(:last-child) {
+.contacts-list__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-list-item:not(:last-child) {
+.nav-list__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contacts-link,
-.nav-link {
+.contacts__link,
+.nav__link {
   display: block;
   color: var(--primary-color);
   font-weight: 500;
@@ -98,7 +98,7 @@ img {
   fill: currentColor;
 }
 
-.contacts-link {
+.contacts__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,12 +108,12 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link:hover,
-.contacts-link:focus {
+.contacts__link:hover,
+.contacts__link:focus {
   color: var(--secondary-title-color);
 }
 
-.nav-link {
+.nav__link {
   position: relative;
   display: block;
   color: var(--title-color);
@@ -123,20 +123,20 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav__link:hover,
+.nav__link:focus {
   color: var(--secondary-title-color);
 }
 
-.nav-link:active {
+.nav__link:active {
   color: var(--secondary-title-color);
 }
 
-.nav-link.current {
+.nav__link.current {
   color: var(--secondary-title-color);
 }
 
-.nav-link.current::after {
+.nav__link.current::after {
   content: '';
   position: absolute;
   left: 0;
