--- a/sass/utils/_basic.scss
+++ b/sass/utils/_basic.scss
@@ -41,3 +41,12 @@ img {
 .section {
     padding-bottom: 94px;
 }
+
+.portfolio-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.logo-header {
+    color: $secondary-title-color;
+}
